--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 {% include header.html %}
 
 <body>
-
     <div id="content">
+
    <div class="grid-items">
          <a href="../yourbussmall1.html" class="grid-item" id="business">
     <img src="../img/smallcompany.svg" alt="">
@@ -45,10 +45,9 @@
     <h1>Services</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, illum.</p>
   </a>
-  <a href="javascript:void(0)" class="grid-item grid-item-big">
-      <img src="../img/services.svg" alt="">
-    <h1>Sustainability</h1>
-    <p>Lorem ipsum consectetur dolor sit amet, consectetur adipisicing elit. Rem, illum.</p>
+  <a href="javascript:void(0)" class="grid-item grid-item-big" id="test">
+  {% include icons/119employeesmockup.html %}
+
   </a>
   <a href="javascript:void(0)" class="grid-item">
     <img src="../img/freetrial.svg" alt="">
