--- a/index.html
+++ b/index.html
@@ -17,48 +17,18 @@
 {% include header.html %}
 
 <body>
-    <div id="content">
 
-   <div class="grid-items">
-         <a href="../yourbussmall1.html" class="grid-item" id="business">
-    <img src="../img/smallcompany.svg" alt="">
-    <h1>1-19 Employees</h1>
-    <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
-  </a>
-  <a href="javascript:void(0)" class="grid-item" id="business">
-    <img src="../img/medcompany.svg" alt="">
-    <h1>19-49 Employees</h1>
-    <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
-  </a>
-  <a href="javascript:void(0)" class="grid-item" id="business">
-    <img src="../img/largecompany.svg" alt="">
-    <h1>50+ Employees</h1>
-    <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
-  </a>
-  <a href="javascript:void(0)" class="grid-item" id="black">
-    <img src="../img/products.svg" alt="">
-    <h1>Products</h1>
-    <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
-  </a>
-  <a href="javascript:void(0)" class="grid-item grid-item-big grid-item-image">
-    <img src="../img/sustain.svg" alt="">
-    <h1>Services</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, illum.</p>
-  </a>
-  <a href="javascript:void(0)" class="grid-item grid-item-big" id="test">
-  {% include icons/119employeesmockup.html %}
-
-  </a>
-  <a href="javascript:void(0)" class="grid-item">
-    <img src="../img/freetrial.svg" alt="">
-    <h1>FREE TRIAL</h1>
-    <p>Lorem ipsum dolor sit amet, elit. Rem, illum.</p>
-  </a>
-
-</div>
-
+  <div class="hero">
+  <div class="hero-inner">
+    <a href="" class="hero-logo"><img src="../img/ocs-logo.svg" alt="Logo Image"></a>
+    <div class="hero-copy">
+      <h1>Short description of Product</h1>
+      <p>A few reasons why this product is worth using, who it's for and why they need it.</p>  
     </div>
-
+    <button>Learn More</button>
+  </div>
+</div>
+ 
 </body>
     {% include footer.html %}
 
